calculation for three-phase network added

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -17,7 +17,8 @@ list(APPEND pulsed_power_daq_sources
     picoscope_base.cc
     power_calc_ff_impl.cc
     mains_frequency_calc_impl.cc
-    power_calc_cc_impl.cc )
+    power_calc_cc_impl.cc
+    power_calc_mul_ph_ff_impl.cc )
 
 
 set(pulsed_power_daq_sources "${pulsed_power_daq_sources}" PARENT_SCOPE)
@@ -107,6 +108,7 @@ include(GrTest)
 #include_directories()
 # List all files that contain Boost.UTF unit tests here
 list(APPEND test_pulsed_power_daq_sources
+qa_power_calc_mul_ph_ff.cc
 qa_power_calc_ff.cc
 qa_mains_frequency_calc.cc
 )
