--- a/blocklib/digitizers/test/meson.build
+++ b/blocklib/digitizers/test/meson.build
@@ -2,5 +2,10 @@
 #    QA
 ###################################################
 
-# Add a statement to enable the qa test files
-# test('<Name Of Test>', py3, args : files('<qa_test_file>.py'), env: TEST_ENV)
+testdeps = [cppunit_dep, gnuradio_blocklib_digitizers_dep]
+
+qa_time_domain_sink = executable('qa_time_domain_sink', 'qa_time_domain_sink.cc',
+                                 dependencies: testdeps,
+                                 link_args : ['-lgnuradio-runtime', '-lgnuradio-blocklib-blocks'])
+
+test('Time Domain Sink', qa_time_domain_sink)
