--- a/blocklib/digitizers/test/meson.build
+++ b/blocklib/digitizers/test/meson.build
@@ -5,6 +5,9 @@
 testdeps = [cppunit_dep, gnuradio_blocklib_digitizers_dep]
 linklibs = ['-lgnuradio-runtime', '-lgnuradio-blocklib-blocks']
 
+qa_block_scaling_offset = executable('qa_block_scaling_offset', 'qa_block_scaling_offset.cc',
+                                     dependencies: testdeps,
+                                     link_args: linklibs)
 qa_median_and_average = executable('qa_median_and_average', 'qa_median_and_average.cc',
                                    dependencies: testdeps,
                                    link_args: linklibs)
@@ -15,6 +18,7 @@ qa_time_domain_sink = executable('qa_time_domain_sink', 'qa_time_domain_sink.cc'
                                  dependencies: testdeps,
                                  link_args: linklibs)
 
+test('Block Scaling Offset', qa_block_scaling_offset)
 test('Median and Average', qa_median_and_average)
 test('Peak Detector', qa_peak_detector)
 #test('Time Domain Sink', qa_time_domain_sink)
