Port freq_estimator (incomplete)
Tag handling missing.

--- a/blocklib/digitizers/test/meson.build
+++ b/blocklib/digitizers/test/meson.build
@@ -8,6 +8,9 @@ linklibs = ['-lgnuradio-runtime', '-lgnuradio-blocklib-blocks']
 qa_block_scaling_offset = executable('qa_block_scaling_offset', 'qa_block_scaling_offset.cc',
                                      dependencies: testdeps,
                                      link_args: linklibs)
+qa_freq_estimator = executable('qa_freq_estimator', 'qa_freq_estimator.cc',
+                               dependencies: testdeps,
+                               link_args: linklibs)
 qa_interlock_generation = executable('qa_interlock_generation', 'qa_interlock_generation.cc',
                                      dependencies: testdeps,
                                      link_args: linklibs)
@@ -25,6 +28,7 @@ qa_time_domain_sink = executable('qa_time_domain_sink', 'qa_time_domain_sink.cc'
                                  link_args: linklibs)
 
 test('Block Scaling Offset', qa_block_scaling_offset)
+test('Frequency Estimator', qa_freq_estimator)
 test('Interlock Generation', qa_interlock_generation)
 test('Median and Average', qa_median_and_average)
 test('STFT Goertzel Dynamic', qa_stft_goertzl_dynamic)
