median_and_average cleanup
Remove old header, make it a gr::block.

--- a/blocklib/digitizers/median_and_average/median_and_average.yml
+++ b/blocklib/digitizers/median_and_average/median_and_average.yml
@@ -1,7 +1,7 @@
 module: digitizers
 block: median_and_average
 label: median_and_average
-blocktype: sync_block
+blocktype: block
 
 typekeys:
   - id: T
