--- a/blocklib/digitizers/demux/demux.yml
+++ b/blocklib/digitizers/demux/demux.yml
@@ -19,15 +19,22 @@ parameters:
 
 ports:
 -   domain: stream
-    id: in
+    id: in0
     direction: input
-    multiplicity: '1-2'
     type: typekeys/T
-
 -   domain: stream
-    id: out
+    id: in1
+    direction: input
+    optional: true
+    type: typekeys/T
+-   domain: stream
+    id: out0
     direction: output
-    multiplicity: '1-2'
+    type: typekeys/T
+-   domain: stream
+    id: out1
+    direction: output
+    optional: true
     type: typekeys/T
 
 implementations:
