Port edge_trigger (untested)
It compiles... the unit test doesn't cover the actual block.

--- a/blocklib/digitizers/test/meson.build
+++ b/blocklib/digitizers/test/meson.build
@@ -11,6 +11,9 @@ qa_block_scaling_offset = executable('qa_block_scaling_offset', 'qa_block_scalin
 qa_demux = executable('qa_demux', 'qa_demux.cc',
                       dependencies: testdeps,
                       link_args: linklibs)
+qa_edge_trigger = executable('qa_edge_trigger', 'qa_edge_trigger.cc',
+                             dependencies: testdeps,
+                             link_args: linklibs)
 qa_freq_estimator = executable('qa_freq_estimator', 'qa_freq_estimator.cc',
                                dependencies: testdeps,
                                link_args: linklibs)
@@ -32,6 +35,7 @@ qa_time_domain_sink = executable('qa_time_domain_sink', 'qa_time_domain_sink.cc'
 
 test('Block Scaling Offset', qa_block_scaling_offset)
 #test('Demux', qa_demux) #TODO (port) reenable (currently hangs)
+test('Edge Trigger', qa_edge_trigger)
 test('Frequency Estimator', qa_freq_estimator)
 test('Interlock Generation', qa_interlock_generation)
 test('Median and Average', qa_median_and_average)
