--- a/blocklib/digitizers/test/meson.build
+++ b/blocklib/digitizers/test/meson.build
@@ -32,6 +32,9 @@ qa_post_mortem_sink = executable('qa_post_mortem_sink', 'qa_post_mortem_sink.cc'
 qa_stft_goertzl_dynamic = executable('qa_stft_goertzl_dynamic', 'qa_stft_goertzl_dynamic.cc',
                                      dependencies: testdeps,
                                      link_args: ['-lgnuradio-runtime', '-lgnuradio-blocklib-blocks', '-lgnuradio-kernel-math'])
+qa_stream_to_vector_overlay = executable('qa_stream_to_vector_overlay', 'qa_stream_to_vector_overlay.cc',
+                                         dependencies: testdeps,
+                                         link_args: linklibs)
 qa_time_domain_sink = executable('qa_time_domain_sink', 'qa_time_domain_sink.cc',
                                  dependencies: testdeps,
                                  link_args: linklibs)
@@ -48,5 +51,6 @@ test('Median and Average', qa_median_and_average)
 test('Peak Detector', qa_peak_detector)
 test('Post Mortem Sink', qa_post_mortem_sink)
 test('STFT Goertzel Dynamic', qa_stft_goertzl_dynamic)
+test('Stream to Vector Overlay', qa_stream_to_vector_overlay)
 #test('Time Domain Sink', qa_time_domain_sink)
 test('WR Receiver', qa_wr_receiver)
