--- a/blocklib/digitizers/enums.yml
+++ b/blocklib/digitizers/enums.yml
@@ -1,3 +1,9 @@
+# TODO(PORT) merge these sink mode enums?
+freq_sink_mode_t:
+  enumerators:
+  - id: FREQ_SINK_MODE_TRIGGERED
+  - id: FREQ_SINK_MODE_STREAMING
+
 time_sink_mode_t:
   enumerators:
   - id: TIME_SINK_MODE_TRIGGERED
