--- a/blocklib/digitizers/test/meson.build
+++ b/blocklib/digitizers/test/meson.build
@@ -20,6 +20,9 @@ qa_edge_trigger = executable('qa_edge_trigger', 'qa_edge_trigger.cc',
 qa_freq_estimator = executable('qa_freq_estimator', 'qa_freq_estimator.cc',
                                dependencies: testdeps,
                                link_args: linklibs)
+qa_freq_sink = executable('qa_freq_sink', 'qa_freq_sink.cc',
+                          dependencies: testdeps,
+                          link_args: linklibs)
 qa_interlock_generation = executable('qa_interlock_generation', 'qa_interlock_generation.cc',
                                      dependencies: testdeps,
                                      link_args: linklibs)
@@ -50,6 +53,7 @@ test('Block Scaling Offset', qa_block_scaling_offset)
 #test('Demux', qa_demux) #TODO (port) reenable (currently hangs)
 test('Edge Trigger', qa_edge_trigger)
 test('Frequency Estimator', qa_freq_estimator)
+test('Frequency Sink', qa_freq_sink)
 test('Interlock Generation', qa_interlock_generation)
 test('Median and Average', qa_median_and_average)
 test('Peak Detector', qa_peak_detector)
