--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,3 +1,5 @@
 option('enable_testing', type : 'boolean', value : true)
 option('enable_cuda', type : 'boolean', value : false)
 option('enable_python', type : 'boolean', value : true)
+
+option('libroot_prefix', type : 'string')
